[package]
name = "tent-thrift"
description = "Rust bindings for the Apache Thrift RPC system"
edition = "2021"
version = "0.18.1"
license = "Apache-2.0"
homepage = "http://thrift.apache.org"
documentation = "https://docs.rs/tent-thrift"
repository = "https://github.com/tent-rs/thrift/tree/master/lib/rs"
readme = "README.md"
exclude = ["Makefile*", "test/**", "*.iml"]
keywords = ["thrift"]

[dependencies]
byteorder = "1.3"
integer-encoding = "3.0.3"
log = {version = "0.4", optional = true}
ordered-float = "3.0"
threadpool = {version = "1.7", optional = true}

[features]
default = ["server"]
server = ["threadpool", "log"]
